# veil

./: .gitignore  DEPLOY.md  PROGRESS.md  README.md  VIDEO_SCRIPT.md  package-lock.json  package.json
circuits/: merkle.circom  withdraw.circom
contracts/veil/: Cargo.toml
contracts/veil/src/: fixture.rs  lib.rs  test.rs
contracts/veil/test_snapshots/test/: rejects_tampered_public_input.1.json  verifies_real_proof.1.json
landing/: index.html
scripts/: 01_compile.mjs  02_setup.mjs  05_export.mjs  audit_demo.mjs  demo.mjs  make_logo.mjs  onchain_demo.mjs  show.sh
scripts/deploy/: cli_args.mjs  testnet_demo.sh
scripts/lib/: audit.mjs  veil.mjs
